feat: implementasi POST dan GET (all/per ID) untuk transactions

--- a/verxina-transaction/src/main/resources/application.properties
+++ b/verxina-transaction/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.application.name=verxina-transaction
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/verxina_tx
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5433/verxina_tx
 spring.datasource.username=admin
 spring.datasource.password=password123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+    
 spring.jpa.open-in-view=false
