feat: implementasi kafka

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   verxina-db:
     image: postgres:15-alpine
     container_name: verxina-db
+    restart: always
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password123
@@ -18,13 +19,16 @@ services:
   verxina-redis:
     image: redis:7-alpine
     container_name: verxina-redis
+    restart: always
     ports:
       - "6379:6379"
     networks:
       - verxina-network
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.6.1
+    container_name: verxina-zookeeper
+    restart: always
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -32,7 +36,9 @@ services:
       - verxina-network
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.6.1
+    container_name: verxina-kafka
+    restart: always
     depends_on:
       - zookeeper
     ports:
@@ -40,6 +46,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
