--- a/verxina-transaction/src/main/resources/application.properties
+++ b/verxina-transaction/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
     
 spring.jpa.open-in-view=false
+
+# buat kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.trusted.packages=*
+app.kafka.topic.transaction=transaction-events
