--- a/verxina-transaction/pom.xml
+++ b/verxina-transaction/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
